--- a/views/layout/head.ejs
+++ b/views/layout/head.ejs
@@ -2,5 +2,5 @@
 <html>
   <head>
     <title>Index</title>
-    <link rel='stylesheet' href='/style/common.css' />
+    <link rel='stylesheet' href='/feroot/style/common.css' />
   </head>
